fix scrollbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,3 +3,9 @@
   flex-direction: column;
   height: 100dvh;
 }
+
+.content {
+  flex: 1;
+  overflow: auto;
+  min-height: 0;
+}
